--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -134,175 +134,8 @@
 #data-table tbody tr:nth-child(even) { background-color: #f9f9f9; }
 #data-table tbody tr:hover { background-color: #f1f1f1; }
 
-/* Estilos Ventas / Compras */
-
-.order-by-dropdown{
-    position: absolute;
-    align-items: start;
-    background-color: var(--color-white);
-    top: 100%;
-    left: -2px;
-    right: -2px;
-    border-radius: 0 0 5px 5px;
-    border-width: 0 2px 2px 2px;
-    border-style: solid;
-    border-color: var(--color-black);
-}
-
-.order-by-container{
-    position: relative;
-    padding: 5px 0 5px 5px;
-    border-radius: var(--border-radius);
-    border: var(--border-strong);
-}
-
-.order-by-container.clicked{
-    border-width: 2px 2px 0 2px;
-    border-radius: 5px 5px 0 0;
-}
-
-.order-by-dropdown p {
-    width: 100%;
-    height: fit-content;
-    padding: 10px 0 10px 10px;
-}
-
-.order-by-dropdown p:hover{
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.05);
-}
 /* Placeholder para Vistas no implementadas */
 .dashboard-view.hidden { display: none; }
-
-/* Estilos Estadisticas */
-
-.daily-stats-wrapper{
-    width: fit-content;
-    padding: 3rem;
-    justify-content: left;
-    gap: 3rem;
-}
-
-.stat-group-container{
-    padding: 1rem;
-    gap: 0.5rem;
-    border-radius: var(--border-radius);
-    border-width: 2px;
-    transition: all 0.5s ease;
-    background-color: var(--color-white);
-    border-color: var(--color-white);
-    border-style: solid;
-}
-
-.stat-group-container:hover{
-    background-color: var(--accent-color);
-    border-color: var(--color-black);
-}
-
-.stat-group-container h3{
-    font-size: 2rem;
-}
-
-.daily-stat-item{
-    margin-top: 1rem;
-    padding: 0.5rem;
-    transition: all 0.5s ease;
-}
-
-.daily-stat-item:hover{
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.05);
-}
-
-.daily-stat-item h4{
-    font-size: 1.2rem;
-}
-
-.select-inventory-btn{
-    width: fit-content;
-    height: fit-content;
-    padding: 0.5rem;
-    margin-left: 10px;
-    background-color: var(--color-white);
-    border: var(--border-strong);
-    border-radius: var(--border-radius);
-    cursor: pointer;
-    transition: all var(--transition-speed) ease;
-}
-
-.select-inventory-btn.clicked{
-    border-width: 2px 2px 0 2px;
-    border-radius: 5px 5px 0 0;
-    background-color: var(--accent-color);
-    color: var(--color-white);
-}
-
-.select-inventory-btn:hover{
-    background-color: var(--accent-color);
-    color: var(--color-white);
-}
-
-.inventories-dropdown{
-    z-index: 1000;
-    position: absolute;
-    align-items: end;
-    background-color: var(--color-white);
-    top: 100%;
-    right: 0;
-    border-radius: 5px 0 5px 5px;
-    border: var(--border-strong);
-}
-
-.inventory-select-container{
-    position: relative;
-}
-
-.inventory-btn{
-    width: 100%;
-    white-space: nowrap;
-    display: flex;
-    justify-content: right;
-    padding: 10px 15px;
-    transition: all var(--transition-speed) ease;
-    cursor: pointer;
-    border-width: 2px 0 0;
-    border-style: solid;
-    border-color: var(--color-black);
-}
-
-.inventory-btn:hover{
-    background-color: var(--accent-color);
-    color: var(--color-white);
-}
-
-#new-transaction-container{
-    position: fixed;
-    top: 50%;
-    right:50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--color-white);
-    border-radius: 5px 0 5px 5px;
-    border: var(--border-strong);
-    z-index: 1000;
-    padding: 2rem;
-}
-
-.product-select-container{
-    position: relative;
-}
-
-#product-picker{
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 100;
-    background-color: var(--color-white);
-    border: var(--border-strong);
-    border-radius: var(--border-radius);
-    box-shadow: 5px 5px 0 var(--color-black);
-    min-width: 250px;
-    padding: 0.5rem;
-}
 
 /* --- ESTILOS PARA TABLA VACÍA --- */
 .empty-table-message {
@@ -427,4 +260,195 @@
     filter: brightness(0.9); /* Un poco más oscuro al hacer clic */
     box-shadow: 1px 1px 0px var(--color-black);
     transform: translate(3px, 3px);
+}
+
+/*---------                       ESTILOS DE NANO                       ---------*/
+
+
+/* Estilos Estadisticas */
+
+.daily-stats-wrapper{
+    width: fit-content;
+    padding: 3rem;
+    justify-content: left;
+    gap: 3rem;
+}
+
+.stat-group-container{
+    padding: 1rem;
+    gap: 0.5rem;
+    border-radius: var(--border-radius);
+    border-width: 2px;
+    transition: all 0.5s ease;
+    background-color: var(--color-white);
+    border-color: var(--color-white);
+    border-style: solid;
+}
+
+.stat-group-container:hover{
+    background-color: var(--accent-color);
+    border-color: var(--color-black);
+}
+
+.stat-group-container h3{
+    font-size: 2rem;
+}
+
+.daily-stat-item{
+    margin-top: 1rem;
+    padding: 0.5rem;
+    transition: all 0.5s ease;
+}
+
+.daily-stat-item:hover{
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.05);
+}
+
+.daily-stat-item h4{
+    font-size: 1.2rem;
+}
+
+.select-inventory-btn{
+    width: fit-content;
+    height: fit-content;
+    padding: 0.5rem;
+    margin-left: 10px;
+    background-color: var(--color-white);
+    border: var(--border-strong);
+    border-radius: var(--border-radius);
+    cursor: pointer;
+    transition: all var(--transition-speed) ease;
+}
+
+.select-inventory-btn.clicked{
+    border-width: 2px 2px 0 2px;
+    border-radius: 5px 5px 0 0;
+    background-color: var(--accent-color);
+    color: var(--color-white);
+}
+
+.select-inventory-btn:hover{
+    background-color: var(--accent-color);
+    color: var(--color-white);
+}
+
+.inventories-dropdown{
+    z-index: 1000;
+    position: absolute;
+    align-items: end;
+    background-color: var(--color-white);
+    top: 100%;
+    right: 0;
+    border-radius: 5px 0 5px 5px;
+    border: var(--border-strong);
+}
+
+.inventory-select-container{
+    position: relative;
+}
+
+.inventory-btn{
+    width: 100%;
+    white-space: nowrap;
+    display: flex;
+    justify-content: right;
+    padding: 10px 15px;
+    transition: all var(--transition-speed) ease;
+    cursor: pointer;
+    border-width: 2px 0 0;
+    border-style: solid;
+    border-color: var(--color-black);
+}
+
+.inventory-btn:hover{
+    background-color: var(--accent-color);
+    color: var(--color-white);
+}
+
+.estadisticas-graph-wrapper{
+    width: 100%;
+}
+
+#new-transaction-container{
+    position: fixed;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--color-white);
+    border-radius: 5px 0 5px 5px;
+    border: var(--border-strong);
+    z-index: 100;
+    padding: 2rem;
+}
+
+.product-select-container{
+    position: relative;
+}
+
+#transaction-picker-modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 101;
+    background-color: var(--color-white);
+    border: var(--border-strong);
+    border-radius: var(--border-radius);
+    box-shadow: 5px 5px 0 var(--color-black);
+    min-width: 250px;
+    padding: 0.5rem;
+}
+
+#transaction-success-modal{
+    background-color: var(--color-white);
+    padding: 2rem;
+    max-width: 500px;
+    min-width: 300px;
+    position: absolute;
+    z-index: 100;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: var(--border-strong);
+    border-radius: var(--border-radius);
+    box-shadow: 5px 5px 0 var(--color-black);
+}
+
+/* Estilos Ventas / Compras */
+
+.order-by-dropdown{
+    position: absolute;
+    align-items: start;
+    background-color: var(--color-white);
+    top: 100%;
+    left: -2px;
+    right: -2px;
+    border-radius: 0 0 5px 5px;
+    border-width: 0 2px 2px 2px;
+    border-style: solid;
+    border-color: var(--color-black);
+}
+
+.order-by-container{
+    position: relative;
+    padding: 5px 0 5px 5px;
+    border-radius: var(--border-radius);
+    border: var(--border-strong);
+}
+
+.order-by-container.clicked{
+    border-width: 2px 2px 0 2px;
+    border-radius: 5px 5px 0 0;
+}
+
+.order-by-dropdown p {
+    width: 100%;
+    height: fit-content;
+    padding: 10px 0 10px 10px;
+}
+
+.order-by-dropdown p:hover{
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.05);
 }
