--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,6 +118,81 @@ main {
 }
 .view-container p { color: var(--color-gray); margin-bottom: 1.5rem; }
 
+
+/* ---- Estilos para Botones (Versión "Pop-Up") ---- */
+.btn {
+    display: inline-block;
+    width: 100%;
+    padding: 12px 20px;
+    margin-top: 0.5rem;
+    border: var(--border-strong);
+    border-radius: var(--border-radius);
+    font-family: var(--font-body);
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    transition: all var(--transition-speed) ease;
+    line-height: 1;
+    box-shadow: none;
+    transform: translate(0, 0);
+}
+.btn:hover {
+    box-shadow: 4px 4px 0px var(--color-black);
+    transform: translate(-2px, -2px);
+}
+.btn:active {
+    box-shadow: 1px 1px 0px var(--color-black);
+    transform: translate(3px, 3px);
+}
+
+/* CORRECCIÓN DE COLOR */
+.btn.btn-primary:not(:disabled) {
+    background-color: var(--accent-color);
+    color: var(--color-white);
+}
+.btn.btn-primary:active:not(:disabled) {
+    filter: brightness(1.2);
+}
+.btn.btn-secondary {
+    background-color: var(--color-white);
+    color: var(--color-black);
+}
+
+/* ---- Formularios ---- */
+label { display: block; margin: 1rem 0 0.5rem 0; font-weight: 600; }
+input[type="text"], input[type="email"], input[type="password"], textarea {
+    width: 100%;
+    padding: 12px;
+    background-color: var(--color-white);
+    border: var(--border-strong);
+    border-radius: var(--border-radius);
+    color: var(--color-black);
+    font-family: var(--font-body);
+    font-size: 1rem;
+    transition: all var(--transition-speed) ease;
+}
+input[type="text"]:focus, textarea:focus { outline: none; box-shadow: 0 0 0 3px var(--accent-color); }
+
+#form-micuenta [type="text"], input[type="email"], input[type="password"]{
+    height: 50px;
+}
+.input-locked{
+    background-color: rgba(134, 134, 134, 0.44) !important;
+}
+
+/* ---- Utilitarios ---- */
+.hidden { display: none !important;}
+hr { border: none; height: 2px; background-color: var(--color-black); margin: 1.5rem 0; }
+
+
+
+/* ----                 ESTILOS DE NANO                    ---- */
+
+
+/* ---- Contenedores ---- */
+
 #config-container{
     width: 50rem;
     background-color: var(--color-white);
@@ -429,33 +504,7 @@ main {
     border-radius: var(--border-radius);
 }
 
-/* ---- Estilos para Botones (Versión "Pop-Up") ---- */
-.btn {
-    display: inline-block;
-    width: 100%;
-    padding: 12px 20px;
-    margin-top: 0.5rem;
-    border: var(--border-strong);
-    border-radius: var(--border-radius);
-    font-family: var(--font-body);
-    font-size: 1rem;
-    font-weight: 600;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    transition: all var(--transition-speed) ease;
-    line-height: 1;
-    box-shadow: none;
-    transform: translate(0, 0);
-}
-.btn:hover {
-    box-shadow: 4px 4px 0px var(--color-black);
-    transform: translate(-2px, -2px);
-}
-.btn:active {
-    box-shadow: 1px 1px 0px var(--color-black);
-    transform: translate(3px, 3px);
-}
+/* ---- Estilos de botones ---- */
 
 #btn-password{
     padding: 0;
@@ -546,40 +595,7 @@ main {
     color: var(--color-black);
 }
 
-/* CORRECCIÓN DE COLOR */
-.btn.btn-primary:not(:disabled) {
-    background-color: var(--accent-color);
-    color: var(--color-white);
-}
-.btn.btn-primary:active:not(:disabled) {
-    filter: brightness(1.2);
-}
-.btn.btn-secondary {
-    background-color: var(--color-white);
-    color: var(--color-black);
-}
-
-/* ---- Formularios ---- */
-label { display: block; margin: 1rem 0 0.5rem 0; font-weight: 600; }
-input[type="text"], input[type="email"], input[type="password"], textarea {
-    width: 100%;
-    padding: 12px;
-    background-color: var(--color-white);
-    border: var(--border-strong);
-    border-radius: var(--border-radius);
-    color: var(--color-black);
-    font-family: var(--font-body);
-    font-size: 1rem;
-    transition: all var(--transition-speed) ease;
-}
-input[type="text"]:focus, textarea:focus { outline: none; box-shadow: 0 0 0 3px var(--accent-color); }
-
-#form-micuenta [type="text"], input[type="email"], input[type="password"]{
-    height: 50px;
-}
-.input-locked{
-    background-color: rgba(134, 134, 134, 0.44) !important;
-}
+/* ---- Configuraciones de Forms ---- */
 
 #change-password-form{
     margin-bottom: 2rem;
@@ -689,7 +705,7 @@ input[type="text"]:focus, textarea:focus { outline: none; box-shadow: 0 0 0 3px 
 #grey-background{
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 15;
     background-color: rgba(0, 0, 0, 0.25);
     transition: all var(--transition-speed) ease;
@@ -720,9 +736,6 @@ input[type="text"]:focus, textarea:focus { outline: none; box-shadow: 0 0 0 3px 
     transition: all var(--transition-speed) ease;
 }
 
-/* ---- Utilitarios ---- */
-.hidden { display: none !important;}
-hr { border: none; height: 2px; background-color: var(--color-black); margin: 1.5rem 0; }
 
 /* ---- Media ---- */
 
@@ -796,3 +809,4 @@ hr { border: none; height: 2px; background-color: var(--color-black); margin: 1.
         font-size: 0.75rem;
     }
 }
+
