Update 11/9 Seleccion de columnas recomendadas en CreateDB completamente funcional. Visualización de columnas según preferencias completamente funcional. Modificación de columnas recomendadas desde "Configurar Tabla" casi completa, falta terminar el comportamiento del boton de "guardar cambios" y hacer el update en la tabla Inventarios con las preferencias cambiadas

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -241,7 +241,7 @@
 /* Estilo específico para el botón de eliminar final */
 #confirm-delete-btn {
     background-color: var(--accent-red);
-    border-color: var(--accent-red);
+    border-color: var(--color-black);
     color: var(--color-white);
 }
 #confirm-delete-btn:disabled {
